--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <h1 class="mb-0">Shane
           <span class="text-primary">Butt</span>
         </h1>
-        <div class="subheading mb-5">35 Sutherland Road, Brighton, BN2 0EQ · 07870415198 ·
-          <a href="mailto:name@email.com">shanebutt99@gmail.com</a>
+        <div class="subheading mb-5">35 Sutherland Road · Brighton, BN2 0EQ · 07870415198 ·
+            <a href="mailto:name@email.com">shanebutt99@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
