--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger active" href="#interests">Interests</a>
+                    <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+                    <a class="nav-link js-scroll-trigger active" href="#awards">Projects</a>
                 </li>
             </ul>
         </div>
@@ -98,7 +98,7 @@
                     <div class="resume-content">
                         <h3 class="mb-0">Student Representative</h3>
                         <div class="subheading mb-3">Cynffig Comprehensive School, Wales</div>
-                        <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                        <p>Engaged prospective KS2 students into an area of science, this was usually Physics as that was my chosen area of study at A-Level. I helped set up, design, and create demonstrations, displays, and practical experiments. I also made sure all students and family members wore proper protective gear, such as eye wear when dealing with Bunsen Burners.</p>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">July 2010 - December 2011</span>
@@ -107,9 +107,9 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
                     <div class="resume-content">
-                        <h3 class="mb-0">Web Design Intern</h3>
-                        <div class="subheading mb-3">Shout! Media Productions</div>
-                        <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                        <h3 class="mb-0">Store Assistant</h3>
+                        <div class="subheading mb-3">EuroSchools, Bridgend, Wales</div>
+                        <p>1 Week long work placement, undertaken as a part of my Welsh Baccalaureate GCSE. Helped customers find appropriate clothes, printed text onto t-shirts, and checked stock as well as restocking.</p>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">September 2008 - June 2010</span>
@@ -142,7 +142,8 @@
                     <div class="resume-content">
                         <h3 class="mb-0">Cynffig Comprehensive School</h3>
                         <div class="subheading mb-3">General Certificate of Secondary Education</div>
-                        <p>Achieved 10 GCSEs at Grades C or higher, including Maths, English, and Science.</p>
+                        <p>Achieved 3 A-Levels at Grade C: Maths, Physics, and Welsh Baccalaureate. (2015-2017)</p>
+                        <p>Achieved 10 GCSEs at Grades C or higher, including Maths, English, and Science. (2010-2015)</p>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">September 2010 - July 2017</span>
@@ -154,7 +155,7 @@
 
         <hr class="m-0">
 
-        <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="skills">
+        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
             <div class="w-100">
                 <h2 class="mb-5">Skills</h2>
 
@@ -188,9 +189,9 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
             <div class="w-100">
-                <h2 class="mb-5">Interests</h2>
-                <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                <h2 class="mb-5">Hobbies &amp; Interests</h2>
+                <p>In my spare time, I generally work at my desk, either designing and programming projects, or streaming the games that I play to twitch where I am working on becoming a twitch affiliate. When I’m not investing time into my projects and streaming, I love to practice playing guitar, sharpen my cooking abilities, and workout at the gym whenever I can.</p>
+                <p class="mb-0">When I am forced to exit my house, I love to take a stroll across Brighton pier, take a walk through Queens Park, and visit many of the stores surrounding Churchill Square. I also love to go out with my friends on occassion to have a catch up and a pint at the same time.</p>
             </div>
         </section>
 
@@ -198,40 +199,51 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
             <div class="w-100">
-                <h2 class="mb-5">Awards &amp; Certifications</h2>
+                <h2 class="mb-5">Projects</h2>
                 <ul class="fa-ul mb-0">
                     <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i>
-                        Google Analytics Certified Developer
+                        <div class="subheading mb-3">Discord Bot ("Slothu")</div>
+                        <ul>
+                            <li>Written in C#,</li>
+                            <li>.NET Core 2.0 Runtime</li>
+                            <li>Using Discord.Net 2.0.1 API Wrapper</li>
+                            <li>Has several features, such as:</li>
+                            <ul>
+                                <li>Moderation actions (bans/kicks/message removal)</li>
+                                <li>Server actions (checking server stats, IE. online member count, bot count, ping, etc.)</li>
+                            </ul>
+                            <li>Currently an ongoing project, it is being written during free time</li>
+                            <li>Can be found <a href="https://github.com/ShaneButt/SlothuBot">here</a></li>
+                        </ul>
                     </li>
+                    <br>
                     <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i>
-                        Mobile Web Specialist - Google Certification
+                        <div class="subheading mb-3">Neural Network (University)</div>
+                        <ul>
+                            <li>Written in C#,</li>
+                            <li>.NET Framework</li>
+
+
+
+                            <li>Currently an ongoing project for university project</li>
+                            <li>Can be found <a href="https://github.com/ShaneButt/NeuralNet">here</a></li>
+                        </ul>
                     </li>
+                    <br>
                     <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i>
-                        1<sup>st</sup>
-                        Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                    </li>
-                    <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i>
-                        1<sup>st</sup>
-                        Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                    </li>
-                    <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i>
-                        2<sup>nd</sup>
-                        Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                    </li>
-                    <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i>
-                        1<sup>st</sup>
-                        Place - James Buchanan High School - Hackathon 2006
-                    </li>
-                    <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i>
-                        3<sup>rd</sup>
-                        Place - James Buchanan High School - Hackathon 2005
+                        <div class="subheading mb-3">N-Queens Assignment</div>
+                        <ul>
+                            <li>Written in Java,</li>
+                            <li>Designed with OOP in mind,</li>
+
+
+
+                            <li>Correctly finds one solution to an N-Queens problem</li>
+                            <li>Parameterised board width and n-queens to find</li>
+                            <li>Final Grade achieved was an A (including a Report)</li>
+
+                            <li>Can be found <a href="https://github.com/ShaneButt/UoBYear2/tree/master/Assignment/NQueens">here</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -248,6 +260,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
+
 
 
 
