--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     <span class="text-primary">Butt</span>
                 </h1>
                 <div class="subheading mb-5">
-                    [REDACTED] · Brighton, [REDACTED] · [REDACTED] ·
-                    <a href="mailto:shanebutt99@gmail.com">[REDACTED]@gmail.com</a>
+                    35 Sutherland Road · Brighton, BN2 0EQ · 07870415198 ·
+                    <a href="mailto:shanebutt99@gmail.com">shanebutt99@gmail.com</a>
                 </div>
                 <p class="lead mb-5">I’m extremely passionate about technology and software development. I enjoy building PCs and learning new and challenging things.</p>
                 <p class="lead mb-5">I have several years of experience and practice when it comes to programming and software development (C#/Java), acquired through university coursework and personal projects.</p>
@@ -97,7 +97,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">Student Representative</h3>
-                        <div class="subheading mb-3">[REDACTED], Wales</div>
+                        <div class="subheading mb-3">Cynffig Comprehensive School, Wales</div>
                         <p>Engaged prospective KS2 students into an area of science, this was usually Physics as that was my chosen area of study at A-Level. I helped set up, design, and create demonstrations, displays, and practical experiments. I also made sure all students and family members wore proper protective gear, such as eye wear when dealing with Bunsen Burners.</p>
                     </div>
                     <div class="resume-date text-md-right">
@@ -108,7 +108,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
                     <div class="resume-content">
                         <h3 class="mb-0">Store Assistant</h3>
-                        <div class="subheading mb-3">[REDACTED], [REDACTED], Wales</div>
+                        <div class="subheading mb-3">EuroSchools, Bridgend, Wales</div>
                         <p>1 Week long work placement, undertaken as a part of my Welsh Baccalaureate GCSE. Helped customers find appropriate clothes, printed text onto t-shirts, and checked stock as well as restocking.</p>
                     </div>
                     <div class="resume-date text-md-right">
@@ -140,11 +140,9 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
                     <div class="resume-content">
-                        <h3 class="mb-0">[REDACTED]</h3>
+                        <h3 class="mb-0">Cynffig Comprehensive School</h3>
                         <div class="subheading mb-3">General Certificate of Secondary Education</div>
                         <p>Achieved 3 A-Levels at Grade C: Maths, Physics, and Welsh Baccalaureate. (2015-2017)</p>
-                        <br/>
-                        <div class="subheading mb-3">A-Level</div>
                         <p>Achieved 10 GCSEs at Grades C or higher, including Maths, English, and Science. (2010-2015)</p>
                     </div>
                     <div class="resume-date text-md-right">
@@ -163,7 +161,10 @@
 
                 <div class="subheading mb-3">
                     Programming Languages &amp; Tools<br>
+
                 </div>
+
+
                 <ul>
                     <li>C#,</li>
                     <li>Java,</li>
