More personal info

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     <a class="nav-link js-scroll-trigger" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+                    <a class="nav-link js-scroll-trigger" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+                    <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
@@ -70,8 +70,8 @@
                     35 Sutherland Road · Brighton, BN2 0EQ · 07870415198 ·
                     <a href="mailto:shanebutt99@gmail.com">shanebutt99@gmail.com</a>
                 </div>
-                <p class="lead mb-5">I’m extremely passionate about technology and software development. I enjoy building PCs and learning new and challenging things.</p>
-                <p class="lead mb-5">I have several years of experience and practice when it comes to programming and software development (C#/Java), acquired through university coursework and personal projects.</p>
+                <p class="lead mb-5">I’m extremely passionate about technology and software development, this passion of mine stems from when I was young, playing video games on my handhelds such as Pokemon, Zelda, and Kingdom Hearts, or Runescape and WoW on PC. Games like these brought about a keen interest in learning how they were made. Now, one of my favourite hobbies is building PCs and learning new and challenging things.</p>
+                <p class="lead mb-5">I have apprixmately 5 years of experience and practice when it comes to programming and software development (C#/Java), this is acquired through university coursework and personal projects. I started programming from a relatively young age (roughly 13 years old), however I never truly did anything with it until I was 16 years old and I made an autonomous API request sender.</p>
                 <p class="lead mb-5">I have a GitHub account that holds my most recent projects and work, including my university coursework from start to finish and my own personal projects (“Slothu” Discord Bot (ongoing) and my own NeuralNet (ongoing) both in C#).</p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/shane-butt-b551a9172/">
@@ -81,6 +81,39 @@
                         <i class="fab fa-github"></i>
                     </a>
                 </div>
+            </div>
+        </section>
+
+        <hr class="m-0">
+
+        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+            <div class="w-100">
+                <h2 class="mb-5">Education</h2>
+
+                <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="resume-content">
+                        <h3 class="mb-0">University of Brighton</h3>
+                        <div class="subheading mb-3">Bachelor of Science</div>
+                        <div>Computer Science</div>
+                        <p>On track to achieve at the very least a 2.1 and at best a First-class honours</p>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">September 2017 - Present</span>
+                    </div>
+                </div>
+
+                <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+                    <div class="resume-content">
+                        <h3 class="mb-0">Cynffig Comprehensive School</h3>
+                        <div class="subheading mb-3">General Certificate of Secondary Education</div>
+                        <p>Achieved 3 A-Levels at Grade C: Maths, Physics, and Welsh Baccalaureate. (2015-2017)</p>
+                        <p>Achieved 10 GCSEs at Grades C or higher, including Maths, English, and Science. (2010-2015)</p>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">September 2010 - July 2017</span>
+                    </div>
+                </div>
+
             </div>
         </section>
 
@@ -118,39 +151,6 @@
 
             </div>
 
-        </section>
-
-        <hr class="m-0">
-
-        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
-            <div class="w-100">
-                <h2 class="mb-5">Education</h2>
-
-                <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="resume-content">
-                        <h3 class="mb-0">University of Brighton</h3>
-                        <div class="subheading mb-3">Bachelor of Science</div>
-                        <div>Computer Science</div>
-                        <p>On track to achieve at least a 2.1</p>
-                    </div>
-                    <div class="resume-date text-md-right">
-                        <span class="text-primary">September 2017 - Present</span>
-                    </div>
-                </div>
-
-                <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-                    <div class="resume-content">
-                        <h3 class="mb-0">Cynffig Comprehensive School</h3>
-                        <div class="subheading mb-3">General Certificate of Secondary Education</div>
-                        <p>Achieved 3 A-Levels at Grade C: Maths, Physics, and Welsh Baccalaureate. (2015-2017)</p>
-                        <p>Achieved 10 GCSEs at Grades C or higher, including Maths, English, and Science. (2010-2015)</p>
-                    </div>
-                    <div class="resume-date text-md-right">
-                        <span class="text-primary">September 2010 - July 2017</span>
-                    </div>
-                </div>
-
-            </div>
         </section>
 
         <hr class="m-0">
@@ -226,7 +226,7 @@
 
 
                             <li>Currently an ongoing project for university project</li>
-                            <li>Can be found <a href="https://github.com/ShaneButt/NeuralNet">here</a></li>
+                            <li>Can be found <a href="https://github.com/ShaneButt/SlothNet">here</a></li>
                         </ul>
                     </li>
                     <br>
