--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="w-100">
                 <h2 class="mb-5">Hobbies &amp; Interests</h2>
                 <p>In my spare time, I generally work at my desk, either designing and programming projects, or streaming the games that I play to twitch where I am working on becoming a twitch affiliate. When I’m not investing time into my projects and streaming, I love to practice playing guitar, sharpen my cooking abilities, and workout at the gym whenever I can.</p>
-                <p class="mb-0">When I am forced to exit my house, I love to take a stroll across Brighton pier, take a walk through Queens Park, and visit many of the stores surrounding Churchill Square. I also love to go out with my friends on occassion to have a catch up and a pint at the same time.</p>
+                <p class="mb-0">When I finish working on a project for the day, or I get stuck at an obstacle; I love to take a stroll across Brighton pier, take a walk through Queens Park, and visit many of the stores surrounding Churchill Square. I also love to go out with my friends on occassion to have a catch up and a pint at the same time.</p>
             </div>
         </section>
 
@@ -210,10 +210,10 @@
                             <li>Has several features, such as:</li>
                             <ul>
                                 <li>Moderation actions (bans/kicks/message removal)</li>
-                                <li>Server actions (checking server stats, IE. online member count, bot count, ping, etc.)</li>
+                                <li>Server actions (checking server stats, IE. online member count, bot-member count, ping, etc.)</li>
                             </ul>
                             <li>Currently an ongoing project, it is being written during free time</li>
-                            <li>Can be found <a href="https://github.com/ShaneButt/SlothuBot">here</a></li>
+                            <li>Source code can be found <a href="https://github.com/ShaneButt/SlothuBot">here</a></li>
                         </ul>
                     </li>
                     <br>
@@ -226,7 +226,7 @@
 
 
                             <li>Currently an ongoing project for university project</li>
-                            <li>Can be found <a href="https://github.com/ShaneButt/SlothNet">here</a></li>
+                            <li>Source code can be found <a href="https://github.com/ShaneButt/SlothNet">here</a></li>
                         </ul>
                     </li>
                     <br>
@@ -242,7 +242,7 @@
                             <li>Parameterised board width and n-queens to find</li>
                             <li>Final Grade achieved was an A (including a Report)</li>
 
-                            <li>Can be found <a href="https://github.com/ShaneButt/UoBYear2/tree/master/Assignment/NQueens">here</a></li>
+                            <li>Source code can be found <a href="https://github.com/ShaneButt/UoBYear2/tree/master/Assignment/NQueens">here</a></li>
                         </ul>
                     </li>
                 </ul>
