--- a/index.html
+++ b/index.html
@@ -70,8 +70,12 @@
                     35 Sutherland Road · Brighton, BN2 0EQ · 07870415198 ·
                     <a href="mailto:shanebutt99@gmail.com">shanebutt99@gmail.com</a>
                 </div>
-                <p class="lead mb-5">I’m extremely passionate about technology and software development, this passion of mine stems from when I was young, playing video games on my handhelds such as Pokemon, Zelda, and Kingdom Hearts, or Runescape and WoW on PC. Games like these brought about a keen interest in learning how they were made. Now, one of my favourite hobbies is building PCs and learning new and challenging things.</p>
-                <p class="lead mb-5">I have apprixmately 5 years of experience and practice when it comes to programming and software development (C#/Java), this is acquired through university coursework and personal projects. I started programming from a relatively young age (roughly 13 years old), however I never truly did anything with it until I was 16 years old and I made an autonomous API request sender.</p>
+                <p class="lead mb-5">I’m extremely passionate about technology and software development, this passion of mine stems from when I was young, 
+                playing video games on my handhelds such as Pokemon, Zelda, and Kingdom Hearts, or Runescape and WoW on PC. Games like these brought about
+                a keen interest in learning how they were made. Now, my favourite hobbies include building computers from their components, playing video games
+                on steam, and challenging myself with programming, lately I've been learning about Neural Networks, it's tricky but fun nonetheless.
+                </p>
+                <p class="lead mb-5">I have approximately 5 years of experience and practice when it comes to programming and software development (C#/Java), this is acquired through university coursework and personal projects. I started programming from a relatively young age (roughly 13 years old), however I never truly did anything with it until I was 16 years old and I made an autonomous API request sender.</p>
                 <p class="lead mb-5">I have a GitHub account that holds my most recent projects and work, including my university coursework from start to finish and my own personal projects (“Slothu” Discord Bot (ongoing) and my own NeuralNet (ongoing) both in C#).</p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/shane-butt-b551a9172/">
