Updated technical skills

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                 <ul>
                     <li>C#,</li>
                     <li>Java,</li>
+                    <li>C++ (basic)</li>
                     <li>HTML5,</li>
                     <li>CSS3,</li>
                     <li>JavaScript,</li>
